# torchmers

./: .gitignore  README.md  benchmark.py  pyproject.toml
examples/: human_vs_pig_classification.ipynb
tests/: fixtures.py  test_counting.py  test_modules.py  test_tokenizers.py
torchmers/: __init__.py  constants.py  counting.py  modules.py  tokenizers.py  utils.py
