[tool.poetry]
name = "torchmers"
version = "0.1.0"
description = ""
authors = ["Kristian Klemon <kristian.klemon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = {version = "^2.0.1+cu118", source = "pytorch-gpu-src"}
bioseq = {git = "https://github.com/dnbaker/bioseq.git"}
numpy = "^1.26.0"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
tqdm = "^4.66.1"
pandas = "^2.1.1"
seaborn = "^0.12.2"
biopython = "^1.81"
scipy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
